<resources>
    <string name="app_name">Aparat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="latest">Latest</string>
    <string name="settings">Settings</string>
    <string name="rate_app">Rate App</string>
    <string name="login">Login</string>
    <string name="search">Search</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="new_videos">New Videos</string>
    <string name="special_videos">Special Videos</string>
    <string name="best_videos">Best Videos</string>
    <string name="search_Videos">Search Videos</string>
    <string name="username">userName</string>
    <string name="password">Password</string>
    <string name="skip">Skip</string>
    <string name="register">Register</string>
    <string name="about_us">About Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_apps">More Apps</string>
    <string name="company">Company</string>
    <string name="version">Version</string>
    <string name="farzin_co">Farzin Co</string>
    <string name="email">Email</string>
    <string name="farzinallahyari1234gmail_com">farzinallahyari1234@gmail.com</string>
    <string name="website">Website</string>
    <string name="farzin_com">farzin.com</string>
    <string name="contact_us">Contact Us</string>
    <string name="my_number">09203168496</string>
    <string name="creator">Creator :</string>
    <string name="view">View :</string>
    <string name="sth_went_wrong">Something Went Wrong</string>
    <string name="added_to_favs">Added to Favorites</string>
    <string name="remove_fom_favs">Removed From Favorites</string>
</resources>