<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.RegisterActivity">




    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:boxBackgroundMode="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/useredt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@color/transparent"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="20dp"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        app:boxBackgroundMode="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passedt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@color/transparent"
            />

    </com.google.android.material.textfield.TextInputLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/d_40dp"
        >


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/register"
            android:textColor="@color/pink"
            android:background="@drawable/bg_button"
            android:layout_marginEnd="@dimen/d_10dp"
            android:textAllCaps="false"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/skipbtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/skip"
            android:background="@drawable/bg_button"
            android:textColor="@color/pink"
            android:textAllCaps="false"
            />



    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/dimen_16dp"
        android:layout_marginEnd="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/d_30dp"
        android:text="@string/login"
        android:textColor="@color/pink"
        />


























</LinearLayout>