<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AboutUsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_8dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_android_24"
                android:layout_marginStart="@dimen/dimen_8dp"
                app:tint="@color/pink"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@color/pink"
                />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1.11"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_8dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_developer_board_24"
                android:layout_marginStart="@dimen/dimen_8dp"
                app:tint="@color/pink"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@color/pink"
                />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farzin_co"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_8dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_email_24"
                android:layout_marginStart="@dimen/dimen_8dp"
                app:tint="@color/pink"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@color/pink"
                />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farzinallahyari1234gmail_com"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_8dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_email_24"
                android:layout_marginStart="@dimen/dimen_8dp"
                app:tint="@color/pink"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@color/pink"
                />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/website"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/farzin_com"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:cardElevation="@dimen/dimen_8dp"
        android:layout_margin="@dimen/dimen_8dp"
        >

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_baseline_call_24"
                android:layout_marginStart="@dimen/dimen_8dp"
                app:tint="@color/pink"
                />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dimen_8dp"
                android:background="@color/pink"
                />

            <LinearLayout
                android:gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:textStyle="bold"
                    />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_number"
                    android:layout_gravity="center"
                    />

            </LinearLayout>



        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>