<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_margin="@dimen/dimen_16dp"
        app:cardElevation="@dimen/dimen_16dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/dimen_8dp"
            android:paddingBottom="@dimen/dimen_8dp"
            >

            <androidx.cardview.widget.CardView
                android:id="@+id/about_us_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_us"
                        android:textSize="@dimen/sp_22"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/privacy_policy_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy_policy"
                        android:textSize="@dimen/sp_22"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/more_apps_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                >


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="@dimen/dimen_8dp"
                    >

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/more_apps"
                        android:textSize="@dimen/sp_22"
                        android:paddingStart="@dimen/dimen_8dp"
                        android:paddingEnd="@dimen/dimen_8dp"
                        />

                    <View
                        android:layout_width="wrap_content"
                        android:layout_height="1dp"
                        />

                </LinearLayout>

            </androidx.cardview.widget.CardView>



        </LinearLayout>



    </androidx.cardview.widget.CardView>

</RelativeLayout>